kubernetes/06-ingress/academic-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academic-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # Example: /api/lecturers -> /lecturers
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/academic/(.*) # Path untuk Academic Service
            pathType: Prefix
            backend:
              service:
                name: academic-service
                port:
                  number: 80
