kubernetes/06-ingress/pgadmin-ingress.yaml
# kubernetes/06-ingress/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Penting untuk subpath
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /pgadmin(/|$)(.*) # Akses pgAdmin via /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
